--- a/contacto.html
+++ b/contacto.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="contacto.css">
         <title>Formulario de contacto</title>
     </head>
     <body>
         <h1>Contacto</h1>
         <br>
         <h2>¡Contactanos para cualquier consulta o comentario!</h2>
-        <form action="https://www.w3schools.com/action_page.php" method="post" novalidate>
+        <form class="formulario" action="https://www.w3schools.com/action_page.php" method="post">
             <fieldset>
                 <legend>Información Personal</legend>
                 <label for="nombre">Nombre:</label>
@@ -41,20 +42,26 @@
                     <option value="comentario">Comentario</option>
                     <option value="sugerencia">Sugerencia</option>
                     <option value="otro">Otro</option>
-                </select><br><br>
-                <label>
-                    <input type="checkbox" name="acepto_term" value="acepto">Acepto los términos y condiciones
-                </label><br></br>
+                </select><br>
+                <div class="check">
+                    <label>
+                        <input type="checkbox" name="acepto_term" value="acepto">Acepto los términos y condiciones
+                    </label>
+                </div>
                 <p>Género:</p>
-                <label>
-                    <input type="radio" name="genero" value="masculino">Masculino
-                </label>
-                <label>
-                    <input type="radio" name="genero">Femenino
-                </label><br></br>
+                <div class="radio">
+                    <label>
+                        <input class="radio" type="radio" name="genero" value="masculino">Masculino
+                    </label>
+                    <label>
+                        <input class="radio" type="radio" name="genero">Femenino
+                    </label>
+                </div>
             </fieldset>
+            <div class="botones">
             <input type="submit" value="Enviar" target="_blank">
             <input type="reset" value="Borrar">
+            </div>
         </form>
     </body>
 </html>
